hydroflow/tests/snapshots/surface_codegen__basic_3@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_codegen.rs
expression: df.serde_graph().unwrap().to_mermaid()
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#02f,color:#fff,stroke:#000
classDef pushClass fill:#ff0,stroke:#000
linkStyle default stroke:#aaa,stroke-width:4px,color:red,font-size:1.5em;
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1[\"(1v1) <tt>source_iter([1])</tt>"/]:::pullClass
    2v1[\"(2v1) <tt>map(|v| v + 1)</tt>"/]:::pullClass
    3v1[/"(3v1) <tt>for_each(|v| out_send.send(v).unwrap())</tt>"\]:::pushClass
    1v1--->2v1
    2v1--->3v1
end

