hydroflow/tests/snapshots/surface_codegen__persist@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_codegen.rs
expression: df.meta_graph().unwrap().to_mermaid()
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa,stroke-width:4px,color:red,font-size:1.5em;
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1[\"(1v1) <code>source_iter([1, 2, 3])</code>"/]:::pullClass
    2v1[\"(2v1) <code>persist()</code>"/]:::pullClass
    3v1[/"(3v1) <code>tee()</code>"\]:::pushClass
    4v1[/"(4v1) <code>for_each(|v| pull_tx.send(v).unwrap())</code>"\]:::pushClass
    5v1[/"(5v1) <code>persist()</code>"\]:::pushClass
    6v1[/"(6v1) <code>for_each(|v| push_tx.send(v).unwrap())</code>"\]:::pushClass
    1v1--->2v1
    2v1--->3v1
    3v1--->4v1
    3v1--->5v1
    5v1--->6v1
    subgraph sg_1v1_var_my_tee ["var <tt>my_tee</tt>"]
        1v1
        2v1
        3v1
    end
end

